-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.9.0 Alpha
-
None
-
Windows 10
-
29d89645aab7b830c5d56b04f1947fa6b445c620
BusyIndicator is not shown in the material style (e.g. with gallery example)
| For Gerrit Dashboard: QTBUG-59911 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 190534,2 | BusyIndicator: add lacking initialization in material style | 5.9 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |