BusyIndicator: add lacking initialization in material style

Random values of the m_elapsed could make the time in updateCurrentTime invalid.

Task-number: QTBUG-59911
Change-Id: I8d36f50f01679f56300df9bae00a8d5de6528cc3
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>